=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG siesta-4.0 branch

-----------------------------------------------------------------------
2016-01-28   13:00:00 GMT                                      4.0b-486
Fix Tests/test.mk and Genbasis makefile

* The reference directory's path was incorrect in Tests/test.mk

* In Util/Gen-basis/Makefile, the treatment of COMP_LIBS did not
  properly cover all cases.

modified:
  Tests/test.mk
  Util/Gen-basis/Makefile
  
-----------------------------------------------------------------------
2015-12-27   21:50:00 GMT                                      4.0b-485
Fix peak alloc report in MPI

When alloc-report-level is 1 or 3, a report should be printed at every
peak. This hanged in MPI runs. Now only the root node peaks are
printed.

(Thanks to Nick R. Papior)

modified:
  Src/alloc.F90
  Docs/siesta.tex
  
-----------------------------------------------------------------------
2015-12-18   13:30:00 GMT                                      4.0b-484
Preparation of release notes for 4.0-beta

* Interim release and technical notes.

* Some older .CHANGES files have been moved to the 'branch-changes'
  directory.

* Older release notes moved to the 'older-release-notes' directory.

added:
  Docs/Changelog-from-trunk-462.txt
  Docs/branch-changes/
  Docs/older-release-notes/
  Docs/older-release-notes/release.notes_3.0
  Docs/older-release-notes/release.notes_3.1
  Docs/older-release-notes/release.notes_3.2
  Docs/release_notes.4.0-beta
renamed:
  Docs/BSC.CHANGES => Docs/branch-changes/BSC.CHANGES
  Docs/CHANGES.charconf => Docs/branch-changes/CHANGES.charconf
  Docs/CHANGES.minim => Docs/branch-changes/CHANGES.minim
  Docs/Grid.CHANGES => Docs/branch-changes/Grid.CHANGES
  Docs/KNOWN.ISSUES.BSC-patch => Docs/branch-changes/KNOWN.ISSUES.BSC-patch